--- a/02.DogsApp-CRUD-Filter/DogsApp/DogsApp/appsettings.json
+++ b/02.DogsApp-CRUD-Filter/DogsApp/DogsApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=DogsDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=NewDogsDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
