--- a/WebShopApp/WebShopApp/WebShopApp.csproj
+++ b/WebShopApp/WebShopApp/WebShopApp.csproj
@@ -1,16 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>aspnet-WebShopApp-7f2e650b-a944-45bd-80cb-d0efca60d4de</UserSecretsId>
+    <UserSecretsId>aspnet-WebShopApp-2df5e99e-de92-4e94-b43d-aba8b844da3c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.28" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.27" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.35" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.35" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.27" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.35" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.35" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.35">
@@ -22,7 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WebShopApp.Core\WebShopApp.Core.csproj" />
-    <ProjectReference Include="..\WebShopApp.Infrastrucutre\WebShopApp.Infrastrucutre.csproj" />
+    <ProjectReference Include="..\WebShopApp.Infrastructure\WebShopApp.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
